# windx

./: .deployignore  .deployment  .gitignore  MIGRATION_REPORT.md  PLAN.md  SUMMARY.md  _create_entry_pages.py  _entry_setup.py  create_schema.json.ps1  main.py  manage.py  pyproject.toml  summary.txt  test_preview_data_fix.py  test_profile_page_fix.py  todo
.github/workflows/: main_windxapp-staging.yml
alembic/versions/: 0c92bb86e9cd_add_image_url_to_attribute_nodes.py  9d790dc1c955_clean_migration_with_model_defined_.py  ba0a6a525f3f_add_page_type_field_to_attribute_nodes.py  d3e80a73ebc5_add_display_name_field_to_attribute_.py
app/api/: deps.py  types.py
app/api/v1/: router.py
app/core/: exceptions.py  manufacturing_type_resolver.py  middleware.py  rbac.py  rbac_template_helpers.py
app/models/: attribute_node.py
app/schemas/: attribute_node.py  entry.py
app/services/: configuration.py  entry.py  rbac.py  relations.py  user.py
app/services/storage/: base.py  service.py  supabase_provider.py
app/static/css/: admin.css  profile-entry.css  relations.css
app/static/js/: profile-entry.js  relations.js
app/templates/: __init__.py  rbac_context.py
app/templates/admin/: login.html.jinja
app/templates/components/: navigation.html.jinja
backend/: _entry_setup.py  _manager_factory.py  _manager_utils.py  main.py  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 057e539f7375_add_core_windx_tables.py  16781a3b6e95_add_model_defined_performance_indexes.py  6a07301cffee_add_admin_performance_indexes.py  7895e0d26f10_initial_migration.py  95aa64961de9_merge_rbac_indexes.py  abc5a9a36c5b_add_unique_constraint_for_manufacturing_.py  c281549c872f_add_role_field_to_users.py  d7882101cf73_change_timestamps_to_timezone_aware.py
backend/app/: __init__.py
backend/app/api/: __init__.py  admin_utils.py  types.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  limiter.py  manufacturing_type_resolver.py  middleware.py  pagination.py  rbac.py  rbac_actions.py  security.py
backend/app/database/: __init__.py  base.py  connection.py  types.py  utils.py
backend/app/models/: __init__.py  attribute_node.py  configuration.py  configuration_selection.py  configuration_template.py  customer.py  manufacturing_type.py  order.py  order_item.py  quote.py  session.py  template_selection.py  user.py
backend/app/repositories/: __init__.py  attribute_node.py  base.py  configuration.py  configuration_selection.py  configuration_template.py  customer.py  manufacturing_type.py  order.py  quote.py  session.py  template_selection.py  user.py  windx_base.py
backend/app/schemas/: __init__.py  attribute_node.py  auth.py  configuration.py  configuration_selection.py  configuration_template.py  customer.py  definition.py  entry.py  manufacturing_type.py  order.py  order_item.py  quote.py  responses.py  session.py  template_selection.py  user.py
backend/app/services/: __init__.py  auth.py  base.py  dashboard.py  entry.py  hierarchy_builder.py  order.py  policy_manager.py  pricing.py  product_definition.py  quote.py  rbac.py  relations.py  session.py  template.py
backend/app/static/: swagger-ui.html
backend/config/: rbac_model.conf  rbac_policy.csv
backend/config/pages/: accessories.yaml  glazing.yaml  profile.yaml
backend/scripts/: openapi_parser.py  seed_relations.py  setup_glazing_hierarchy.py  setup_hierarchy.py  setup_product_definitions.py  setup_profile_hierarchy.py  verify_latest_system_series.py
backend/scripts/product_definition/: __init__.py  base.py  debug_glazing.py  debug_profile.py  setup_all_scopes.py  setup_glazing.py  setup_profile.py
backend/tests/: README.md  __init__.py  check_stats.py  config.py
backend/tests/factories/: __init__.py  configuration_factory.py  customer_factory.py  order_factory.py  quote_factory.py  user_factory.py
backend/tests/integration/: __init__.py  test_admin_hierarchy_parent_selector.py  test_admin_manufacturing_rbac.py  test_admin_orders.py  test_auth.py  test_bulk_delete_functionality.py  test_bulk_operations.py  test_customer_order_workflow.py  test_customer_repository.py  test_enhanced_error_handling.py  test_entry_api.py  test_export.py  test_login.py  (+14 more)
docs/: DECISION.md  PLAN.md  PRODUCT_DEFINITIONS_REFACTORING_PLAN.md  problem.md
docs/mockups/: glazing-builder-mockup.html  glazing-entry-mockup.html
frontend/: package.json  vite.config.ts
frontend/src/: env.d.ts  main.ts
scripts/: analyze_page_structure.py  debug_relations.py  seed_profile_data.py  setup_accessories_hierarchy.py  setup_profile_hierarchy.py  startup-azure.sh  update_conditions.py
tests/: conftest.py
tests/integration/: test_admin_entry.py  test_admin_hierarchy_endpoints.py  test_admin_hierarchy_form_validation.py  test_admin_relations.py  test_admin_templates.py  test_api_endpoints_page_types.py  test_bulk_delete_functionality.py  test_casbin_rbac_workflows.py  test_dashboard_optimized.py  test_duplicate_page_type_setup.py  test_page_type_database.py  test_template_service.py  test_unique_constraint_enforcement.py
tests/unit/: test_attribute_node_page_types.py  test_customer_relationship_properties.py  test_entry_authentication_properties.py  test_entry_data_persistence.py  test_foreign_key_constraint_properties.py  test_manufacturing_type_resolver.py  test_profile_page_fix.py  test_search_functionality.py  test_storage_configuration.py
(+174 files in other folders)
